--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,7 +1,22 @@
-<h2>All Companies</h2><br>
+<div class="container">
 
-<ul style="list-style-type: none;">
-  <% @companies.each do |company| %>
-    <li><%= link_to company.name, company %></li><br><br>
-  <% end %>
-</ul>
+  <h2>All Companies</h2>
+
+  <table class="striped">
+     <thead>
+       <tr>
+           <th>Name</th>
+       </tr>
+     </thead>
+
+     <tbody>
+
+    <% @companies.each do |company| %>
+      <tr><td><%= link_to company.name, company %></td></tr>
+    <% end %>
+
+      </tbody>
+
+  </table>
+
+</div>
